gc/stress/TestReclaimStringsLeaksMemory.java fails with reserved greater than expected

XMLWordPrintable

    • b25

        gc/stress/TestReclaimStringsLeaksMemory.java recently started failing frequently. Failures occur on multiple platforms, and have been seen with several different collector configurations. The test has multiple @run configurations for different collectors. Since it started failing I don't see any runs where all of those configurations passed, though which one fails varies. I found failures for +UseSerialGC, +UseParallelGC -UseParallelOldGC, and +UseConcMarkSweepGC.

        The failure is reported as an exception whose message looks something like this:

        Reserved memory size is 146151KB which is greater than or equal to 70000KB indicating a memory leak: expected that 146151 < 70000

        The exact reserved value may vary a bit, but all failures I've looked at reported close to 146M.

          There are no Sub-Tasks for this issue.

              Assignee:
              Coleen Phillimore
              Reporter:
              Kim Barrett
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: