8224847: gc/stress/TestReclaimStringsLeaksMemory.java fails with reserved greater than expected

Rehash threshold was too low for StringTable, and rehashed size table was too large.

Reviewed-by: rehn, gziemski